YAMLS/kong-svc-sistema-helpgr.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-svc-sistema-helpgr
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30010
  selector:
    app: sistema-helpgr
