YAMLS/svc-db-helpgr.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-db-helpgr
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: db-helpgr
