YAMLS/svc-helpgr.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-helpgr
spec:
  type: NodePort
  ports:
    - port: 8080
      #targetPort: 80
      nodePort: 30000
  selector:
    app: helpgr
