YAMLS/svc-sistema-helpgr.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-sistema-helpgr
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30000
  selector:
    app: sistema-helpgr
