YAMLS/svc-teste.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-servico-teste
spec:
  selector:
    app: meu-aplicativo-de-teste
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
